// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ViewToggle — value × colorMode snapshot matrix renders value=birds colorMode=dark 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#140E0AD9",
        "borderColor": "#FFFFFF26",
        "borderRadius": 999,
        "borderWidth": 0.5,
        "elevation": 8,
        "flexDirection": "row",
        "height": 36,
        "overflow": "hidden",
        "padding": 4,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 12,
        "width": 96,
      },
      undefined,
    ]
  }
  testID="toggle"
>
  <View
    intensity={60}
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    tint="dark"
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#FF73503D",
          "borderColor": "#FF735080",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "elevation": 2,
          "height": 28,
          "left": 4,
          "position": "absolute",
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 6,
          "top": 4,
          "width": 44,
        },
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Bird's-eye view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-birds"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 1,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGCircle
            cx={7}
            cy={9}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.9}
            propList={
              [
                "fill",
              ]
            }
            r={2.5}
          />
          <RNSVGCircle
            cx={16}
            cy={6}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.7}
            propList={
              [
                "fill",
              ]
            }
            r={1.8}
          />
          <RNSVGCircle
            cx={14}
            cy={16}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.85}
            propList={
              [
                "fill",
              ]
            }
            r={2.2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    accessibilityLabel="Detailed view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-cards"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 0.55,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={5}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={11}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={2.5}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={17}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ViewToggle — value × colorMode snapshot matrix renders value=birds colorMode=light 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#140E0AD9",
        "borderColor": "#FFFFFF26",
        "borderRadius": 999,
        "borderWidth": 0.5,
        "elevation": 8,
        "flexDirection": "row",
        "height": 36,
        "overflow": "hidden",
        "padding": 4,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 12,
        "width": 96,
      },
      undefined,
    ]
  }
  testID="toggle"
>
  <View
    intensity={60}
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    tint="light"
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#FF73503D",
          "borderColor": "#FF735080",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "elevation": 2,
          "height": 28,
          "left": 4,
          "position": "absolute",
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 6,
          "top": 4,
          "width": 44,
        },
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Bird's-eye view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-birds"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 1,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGCircle
            cx={7}
            cy={9}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.9}
            propList={
              [
                "fill",
              ]
            }
            r={2.5}
          />
          <RNSVGCircle
            cx={16}
            cy={6}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.7}
            propList={
              [
                "fill",
              ]
            }
            r={1.8}
          />
          <RNSVGCircle
            cx={14}
            cy={16}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.85}
            propList={
              [
                "fill",
              ]
            }
            r={2.2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    accessibilityLabel="Detailed view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-cards"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 0.55,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={5}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={11}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={2.5}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={17}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ViewToggle — value × colorMode snapshot matrix renders value=cards colorMode=dark 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#140E0AD9",
        "borderColor": "#FFFFFF26",
        "borderRadius": 999,
        "borderWidth": 0.5,
        "elevation": 8,
        "flexDirection": "row",
        "height": 36,
        "overflow": "hidden",
        "padding": 4,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 12,
        "width": 96,
      },
      undefined,
    ]
  }
  testID="toggle"
>
  <View
    intensity={60}
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    tint="dark"
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#FF73503D",
          "borderColor": "#FF735080",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "elevation": 2,
          "height": 28,
          "left": 4,
          "position": "absolute",
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 6,
          "top": 4,
          "width": 44,
        },
        {
          "transform": [
            {
              "translateX": 44,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Bird's-eye view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-birds"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 0.55,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGCircle
            cx={7}
            cy={9}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.9}
            propList={
              [
                "fill",
              ]
            }
            r={2.5}
          />
          <RNSVGCircle
            cx={16}
            cy={6}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.7}
            propList={
              [
                "fill",
              ]
            }
            r={1.8}
          />
          <RNSVGCircle
            cx={14}
            cy={16}
            fill={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            opacity={0.85}
            propList={
              [
                "fill",
              ]
            }
            r={2.2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    accessibilityLabel="Detailed view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-cards"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 1,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={5}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={11}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={2.5}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={17}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ViewToggle — value × colorMode snapshot matrix renders value=cards colorMode=light 1`] = `
<View
  accessibilityRole="radiogroup"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#140E0AD9",
        "borderColor": "#FFFFFF26",
        "borderRadius": 999,
        "borderWidth": 0.5,
        "elevation": 8,
        "flexDirection": "row",
        "height": 36,
        "overflow": "hidden",
        "padding": 4,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 12,
        "width": 96,
      },
      undefined,
    ]
  }
  testID="toggle"
>
  <View
    intensity={60}
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    tint="light"
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#FF73503D",
          "borderColor": "#FF735080",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "elevation": 2,
          "height": 28,
          "left": 4,
          "position": "absolute",
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 6,
          "top": 4,
          "width": 44,
        },
        {
          "transform": [
            {
              "translateX": 44,
            },
          ],
        },
      ]
    }
  />
  <View
    accessibilityLabel="Bird's-eye view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-birds"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 0.55,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGCircle
            cx={7}
            cy={9}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.9}
            propList={
              [
                "fill",
              ]
            }
            r={2.5}
          />
          <RNSVGCircle
            cx={16}
            cy={6}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.7}
            propList={
              [
                "fill",
              ]
            }
            r={1.8}
          />
          <RNSVGCircle
            cx={14}
            cy={16}
            fill={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            opacity={0.85}
            propList={
              [
                "fill",
              ]
            }
            r={2.2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    accessibilityLabel="Detailed view"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={4}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 28,
        "justifyContent": "center",
        "width": 44,
      }
    }
    testID="toggle-cards"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "opacity": 1,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={5}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={4}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1.2}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={11}
          />
          <RNSVGRect
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            height={2.5}
            propList={
              [
                "stroke",
                "strokeWidth",
              ]
            }
            rx={1}
            stroke={
              {
                "payload": 4279177756,
                "type": 0,
              }
            }
            strokeWidth={1.8}
            width={16}
            x={4}
            y={17}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
